fix Kotlin compiler